add usuario e senha - simples

--- a/spring-security/src/main/resources/application.properties
+++ b/spring-security/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=spring-security
+#spring.application.name=spring-security
+# adicionando segurança simples
+spring.security.user.name=user
+spring.security.user.password=user123456
+spring.security.user.roles=USERS
