def niveis de acesso

--- a/spring-security/src/main/resources/application.properties
+++ b/spring-security/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 #spring.application.name=spring-security
+
 # adicionando segurança simples
-spring.security.user.name=user
-spring.security.user.password=user123456
-spring.security.user.roles=USERS
+#spring.security.user.name=user
+#spring.security.user.password=user123456
+#spring.security.user.roles=USERS
+
+# defindo niveis de autorização as camadas do sistema - nivesi de usuário e perfil de acesso
+
