--- a/spring-security/pom.xml
+++ b/spring-security/pom.xml
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>19</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -50,11 +50,18 @@
 			<scope>test</scope>
 		</dependency>
 	
-   <dependency>
-     <groupId>org.springframework.security</groupId>
-     <artifactId>spring-security-config</artifactId>
-     <version>5.1.6.RELEASE</version>
-   </dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>5.1.6.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>jakarta.servlet</groupId>
+			<artifactId>jakarta.servlet-api</artifactId>
+			<version>5.0.0</version> <!-- ou a versão mais recente -->
+			<scope>provided</scope>
+	</dependency>
  </dependencies>
 
 	<build>
