--- a/spring-security/pom.xml
+++ b/spring-security/pom.xml
@@ -29,7 +29,7 @@
 	<properties>
 		<java.version>19</java.version>
 	</properties>
-	<dependencies>
+		<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
@@ -49,20 +49,14 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-config</artifactId>
-			<version>5.1.6.RELEASE</version>
-		</dependency>
 
 		<dependency>
 			<groupId>jakarta.servlet</groupId>
 			<artifactId>jakarta.servlet-api</artifactId>
-			<version>5.0.0</version> <!-- ou a versão mais recente -->
+			<version>5.0.0</version>
 			<scope>provided</scope>
-	</dependency>
- </dependencies>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
